@@ -1,3 +1,5 @@
+  * socklog-check.c, socklog.c: check length of unix socket to match struct
+    sockaddr.
   * pathexec_env.c, socklog-conf.c, socklog.c, tryto.c, uncat.c: whitespace.
   * socklog.c: fix compilation warning -Wpointer-sign.
   * socklog.c, man/socklog.8: add -T to drop timestamps from syslog messages
